@@ -17,16 +17,13 @@
 package org.springframework.boot.gradle.tasks.run;
 
 import java.io.File;
-import java.lang.reflect.Method;
 import java.util.Set;
 
 import org.gradle.api.file.SourceDirectorySet;
-import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetOutput;
-import org.gradle.jvm.toolchain.JavaLauncher;
 import org.gradle.work.DisableCachingByDefault;
 
 /**
@@ -78,9 +75,6 @@ public class BootRun extends JavaExec {
 	public void exec() {
 		if (this.optimizedLaunch) {
 			setJvmArgs(getJvmArgs());
-			if (!isJava13OrLater()) {
-				jvmArgs("-Xverify:none");
-			}
 			jvmArgs("-XX:TieredStopAtLevel=1");
 		}
 		if (System.console() != null) {
@@ -88,19 +82,6 @@ public class BootRun extends JavaExec {
 			getEnvironment().put("spring.output.ansi.console-available", true);
 		}
 		super.exec();
-	}
-
-	private boolean isJava13OrLater() {
-		Property<JavaLauncher> javaLauncher = this.getJavaLauncher();
-		if (javaLauncher.isPresent()) {
-			return javaLauncher.get().getMetadata().getLanguageVersion().asInt() >= 13;
-		}
-		for (Method method : String.class.getMethods()) {
-			if (method.getName().equals("stripIndent")) {
-				return true;
-			}
-		}
-		return false;
 	}
 
 }
