@@ -22,11 +22,12 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.nio.file.attribute.PosixFilePermission;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -49,6 +50,7 @@ import org.gradle.api.DomainObjectSet;
 import org.gradle.api.Project;
 import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.artifacts.DependencySet;
+import org.gradle.api.artifacts.LenientConfiguration;
 import org.gradle.api.artifacts.ModuleVersionIdentifier;
 import org.gradle.api.artifacts.ProjectDependency;
 import org.gradle.api.artifacts.ResolvableDependencies;
@@ -112,16 +114,11 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 
 	@BeforeEach
 	void createTask() {
-		try {
-			File projectDir = new File(this.temp, "project");
-			projectDir.mkdirs();
-			this.project = GradleProjectBuilder.builder().withProjectDir(projectDir).build();
-			this.project.setDescription("Test project for " + this.taskClass.getSimpleName());
-			this.task = configure(this.project.getTasks().create("testArchive", this.taskClass));
-		}
-		catch (IOException ex) {
-			throw new RuntimeException(ex);
-		}
+		File projectDir = new File(this.temp, "project");
+		projectDir.mkdirs();
+		this.project = GradleProjectBuilder.builder().withProjectDir(projectDir).build();
+		this.project.setDescription("Test project for " + this.taskClass.getSimpleName());
+		this.task = configure(this.project.getTasks().create("testArchive", this.taskClass));
 	}
 
 	@Test
@@ -298,11 +295,11 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	void customLaunchScriptCanBePrepended() throws IOException {
 		this.task.getMainClass().set("com.example.Main");
 		File customScript = new File(this.temp, "custom.script");
-		Files.write(customScript.toPath(), Arrays.asList("custom script"), StandardOpenOption.CREATE);
+		Files.writeString(customScript.toPath(), "custom script", StandardOpenOption.CREATE);
 		this.task.launchScript((configuration) -> configuration.setScript(customScript));
 		executeTask();
-		assertThat(Files.readAllBytes(this.task.getArchiveFile().get().getAsFile().toPath()))
-				.startsWith("custom script".getBytes());
+		Path path = this.task.getArchiveFile().get().getAsFile().toPath();
+		assertThat(Files.readString(path, StandardCharsets.ISO_8859_1)).startsWith("custom script");
 	}
 
 	@Test
@@ -314,10 +311,11 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			configuration.getProperties().put("initInfoDescription", "description");
 		});
 		executeTask();
-		byte[] bytes = Files.readAllBytes(this.task.getArchiveFile().get().getAsFile().toPath());
-		assertThat(bytes).containsSequence("Provides:          provides".getBytes());
-		assertThat(bytes).containsSequence("Short-Description: short description".getBytes());
-		assertThat(bytes).containsSequence("Description:       description".getBytes());
+		Path path = this.task.getArchiveFile().get().getAsFile().toPath();
+		String content = Files.readString(path, StandardCharsets.ISO_8859_1);
+		assertThat(content).containsSequence("Provides:          provides");
+		assertThat(content).containsSequence("Short-Description: short description");
+		assertThat(content).containsSequence("Description:       description");
 	}
 
 	@Test
@@ -582,7 +580,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		return file;
 	}
 
-	private T configure(T task) throws IOException {
+	private T configure(T task) {
 		AbstractArchiveTask archiveTask = task;
 		archiveTask.getArchiveBaseName().set("test");
 		File destination = new File(this.temp, "destination");
@@ -666,7 +664,9 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		artifacts.add(mockProjectArtifact("second-project-library-SNAPSHOT.jar", "com.example",
 				"second-project-library", "1.0.0.SNAPSHOT"));
 		ResolvedConfiguration resolvedConfiguration = mock(ResolvedConfiguration.class);
-		given(resolvedConfiguration.getResolvedArtifacts()).willReturn(artifacts);
+		LenientConfiguration lenientConfiguration = mock(LenientConfiguration.class);
+		given(resolvedConfiguration.getLenientConfiguration()).willReturn(lenientConfiguration);
+		given(lenientConfiguration.getArtifacts()).willReturn(artifacts);
 		Configuration configuration = mock(Configuration.class);
 		given(configuration.getResolvedConfiguration()).willReturn(resolvedConfiguration);
 		ResolvableDependencies resolvableDependencies = mock(ResolvableDependencies.class);
